--- a/overseas/h5/phone.html
+++ b/overseas/h5/phone.html
@@ -15,7 +15,7 @@
         _resize = function(){
             _w = _doc.documentElement.clientWidth||_doc.body.clientWidth;
             _zoom = _w/640;
-            _style.innerHTML = 'body{zoom:'+_zoom+';-moz-transform:scale('+_zoom+');-moz-transform-origin:top left;-webkit-text-size-adjust:auto !important;}'
+            _style.innerHTML = '.wrapper{zoom:'+_zoom+';-moz-transform:scale('+_zoom+');-moz-transform-origin:top left;-webkit-text-size-adjust:auto !important;}'
         };
         _resize();
         window.addEventListener('resize',_resize,false);
@@ -25,13 +25,16 @@
             -webkit-text-size-adjust: none;
             -webkit-user-select: none;
             -webkit-touch-callout: none;
-            font-family: Arial, Helvetica
+            font-family: Arial, Helvetica;
+            overflow-x: hidden;
+            width: 100%;
         }
 
         body {
             font-size: 16px;
             -webkit-tap-highlight-color: transparent;
-            overflow-x: hidden
+            overflow-x: hidden;
+            width: 100%;
         }
 
         body, p, pre, h1, h2, h3, h4, h5, h6, dl, dd, ul, ol, form, input, textarea, th, td, select {
@@ -131,7 +134,7 @@
             box-align: center
         }
         body{background-color: #f13325;}
-        .wrapper{font-family: Arial;}
+        .wrapper{font-family: Arial;width: 640px;position: relative;}
         .wrap-menu{width: 600px;height: 55px;background-color: #f25b00;margin: 0 auto 39px;overflow: hidden;font-size: 0;}
         .wrap-menu-list{display: -webkit-table;display: -moz-table;display: table;height: 100%;}
         .wrap-menu-list li{display: -webkit-table-cell;display: -moz-table-cell;display: table-cell;vertical-align: middle;position: relative;width: 150px;text-align: center;height: 100%}
@@ -168,7 +171,7 @@
 <body>
 <div class="wrapper">
 <header class="banner">
-    <img src="http://img12.360buyimg.com/cms/jfs/t1927/206/1644654025/36918/19868d3d/5665486bN22f70cdb.jpg" width="640" height="397">
+    <img src="http://img13.360buyimg.com/cms/jfs/t2428/339/1627204254/52067/d3a92038/5667acf3N93344f76.jpg" width="640" height="464">
 </header>
 <!-- S 导航 -->
 <nav class="wrap-menu">
@@ -217,7 +220,10 @@
     </ul>
 </section>
 <!--e 常规商品楼层-->
-
+    <!-- S back to main -->
+    <a href="http://m.jd.ru/act/new_year.html" class="actbanner"><img
+            src="http://img11.360buyimg.com/cms/jfs/t2365/118/1528016625/21329/a3d5fd90/566799b9N13565acb.jpg" alt="" width="640" height="230"/></a>
+    <!-- E back to main -->
 </div>
 <!--s 常规商品楼层模板-->
 <script type="text/html" id="list1Tpl">
@@ -285,10 +291,12 @@
 
     /* 数据源加载完毕执行的code */
     function marketRendered(){
+        var tmpHeight = 0;
         //楼层高度
         $('.goodsList-block').each(function(i,k){
             var row = Math.ceil($(k).find('li').length/2);
             $(k).css('height',row*466+52);
+            tmpHeight+=row*466+52;
         })
         //链接地址拼接
         function isInApp(){
@@ -330,24 +338,30 @@
         function detecCoupon(){
             var scrollTop = $(window).scrollTop()*deviceRate,
                     goodsOffsetTop = ($('.wrap-menu').offset().top+55)*deviceRate;
-            if(scrollTop >= goodsOffsetTop-10){
-                $('.wrap-menu-list').addClass('menu-list-fix');
-            }else{
-                $('.wrap-menu-list').removeClass('menu-list-fix');
+            if(navigator.userAgent.toLowerCase().indexOf('windows phone')>=0){
+                $('body').height((tmpHeight+464+55+39+27*4+230)*$(window).width()/640).css({'overflow-y':'hidden'});
+                $('.wrapper').css({'height':(tmpHeight+464+55+39+27*4+230),'overflow':'hidden'});
+                $('.wrap-menu-list li').each(function(i){
+                    $(this).click(function(e){
+                        window.scrollTo(0,$('.goodsList-block').eq(i).offset().top);
+                        e.stopPropagation();
+                        return false;
+                    });
+                });
+            }
+            else{
+                if(scrollTop >= goodsOffsetTop-10){
+                    $('.wrap-menu-list').addClass('menu-list-fix');
+                }else{
+                    $('.wrap-menu-list').removeClass('menu-list-fix');
+                }
             }
             $.each($('.goodsList-block'),function(i){
                 var _this = $(this);
                 var floor_top =_this.offset().top;
-                if(floor_top-65 <= scrollTop){
+                if(floor_top-5 <= scrollTop){
                     $('.wrap-menu-list li').eq(i).addClass('active').siblings().removeClass('active');
                 }
-            });
-            $('.wrap-menu-list li').each(function(i){
-                $(this).click(function(e){
-                   /* window.scrollTo(0,$('.goodsList-block').eq(i).offset().top-60);
-                    e.stopPropagation();
-                    return false;*/
-                });
             });
         }
 
