--- a/overseas/h5/home_appliances.html
+++ b/overseas/h5/home_appliances.html
@@ -154,8 +154,8 @@
         .goods-list .title{line-height: 24px;font-size: 20px;color: #484848;margin-bottom: 5px;height: 24px;overflow: hidden;text-overflow: ellipsis;}
         .goods-list .arrival{color: #ea494f;line-height: 24px;font-size: 18px;font-weight: bold;margin-bottom: 7px;height: 24px;display: block;margin-left: -10px;}
         .goods-list .price{line-height: 28px;margin-bottom: 13px;}
-        .goods-list .j-jd-price{color: #0f0f0f;font-size: 28px;font-weight: bold;}
-        .goods-list .j-sku-price{color: #999999;font-size: 16px;}
+        .goods-list .j-jd-price{color: #0f0f0f;font-size: 28px;font-weight: bold;display: inline-block;vertical-align: middle;max-width: 50%;overflow: hidden;}
+        .goods-list .j-sku-price{color: #999999;font-size: 16px;display: inline-block;vertical-align: middle;max-width: 50%;overflow: hidden;}
         .goods-list .btn-buy{background-color: #ffa401;color: #fff;font-size: 18px;font-weight: bold;width: 260px;height: 44px;line-height: 44px;text-align: center;}
         /* fixed */
         .menu-list-fix{position: fixed;top:0;width: 600px;height: 55px;background-color: #f25b00;margin: 0 auto;z-index: 22;}
@@ -220,10 +220,10 @@
         </ul>
     </section>
     <!--e 常规商品楼层-->
-<!-- S back to main -->
-    <a href="http://m.jd.ru/act/new_year.html" class="actbanner"><img
+    <!-- S back to main -->
+    <a href="http://m.jd.ru/act/new_year.html" class="actbanner" hasclstag="true"><img
             src="http://img11.360buyimg.com/cms/jfs/t2365/118/1528016625/21329/a3d5fd90/566799b9N13565acb.jpg" alt="" width="640" height="230"/></a>
-<!-- E back to main -->
+    <!-- E back to main -->
 </div>
 <!--s 常规商品楼层模板-->
 <script type="text/html" id="list1Tpl">
