--- a/overseas/h5/phone.html
+++ b/overseas/h5/phone.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+10.14.227.51     acen.jd.com<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -154,8 +154,8 @@
         .goods-list .title{line-height: 24px;font-size: 20px;color: #484848;margin-bottom: 5px;height: 24px;overflow: hidden;text-overflow: ellipsis;}
         .goods-list .arrival{color: #ea494f;line-height: 24px;font-size: 18px;font-weight: bold;margin-bottom: 7px;height: 24px;display: block;margin-left: -10px;}
         .goods-list .price{line-height: 28px;margin-bottom: 13px;}
-        .goods-list .j-jd-price{color: #0f0f0f;font-size: 28px;font-weight: bold;}
-        .goods-list .j-sku-price{color: #999999;font-size: 16px;}
+        .goods-list .j-jd-price{color: #0f0f0f;font-size: 28px;font-weight: bold;display: inline-block;vertical-align: middle;max-width: 50%;overflow: hidden;}
+        .goods-list .j-sku-price{color: #999999;font-size: 16px;display: inline-block;vertical-align: middle;max-width: 50%;overflow: hidden;}
         .goods-list .btn-buy{background-color: #ffa401;color: #fff;font-size: 18px;font-weight: bold;width: 260px;height: 44px;line-height: 44px;text-align: center;}
         /* fixed */
         .menu-list-fix{position: fixed;top:0;width: 600px;height: 55px;background-color: #f25b00;margin: 0 auto;z-index: 22;}
@@ -170,58 +170,58 @@
 
 <body>
 <div class="wrapper">
-<header class="banner">
-    <img src="http://img13.360buyimg.com/cms/jfs/t2428/339/1627204254/52067/d3a92038/5667acf3N93344f76.jpg" width="640" height="464">
-</header>
-<!-- S 导航 -->
-<nav class="wrap-menu">
-    <ul class="wrap-menu-list">
-        <li class="wrap-menu-1 active"><a href="#flr1">Смартфоны<span class="icon"></span></a></li>
-        <li class="wrap-menu-2"><a href="#flr2">Планшеты<span class="icon"></span></a></li>
-        <li class="wrap-menu-3"><a href="#flr3">Аксессуары<span class="icon"></span></a></li>
-        <li class="wrap-menu-4"><a href="#flr4">Цифровая техника</a></li>
-    </ul>
-</nav>
-<!-- E 导航 -->
+    <header class="banner">
+        <img src="http://img13.360buyimg.com/cms/jfs/t2428/339/1627204254/52067/d3a92038/5667acf3N93344f76.jpg" width="640" height="464">
+    </header>
+    <!-- S 导航 -->
+    <nav class="wrap-menu">
+        <ul class="wrap-menu-list">
+            <li class="wrap-menu-1 active"><a href="#flr1">Смартфоны<span class="icon"></span></a></li>
+            <li class="wrap-menu-2"><a href="#flr2">Планшеты<span class="icon"></span></a></li>
+            <li class="wrap-menu-3"><a href="#flr3">Аксессуары<span class="icon"></span></a></li>
+            <li class="wrap-menu-4"><a href="#flr4">Цифровая техника</a></li>
+        </ul>
+    </nav>
+    <!-- E 导航 -->
 
-<!--s 常规商品楼层-->
-<section class="goodsList-block" id="flr1">
-    <div class="floor-title">
-        <h2 class="flr-hd-1 flr-hd">Смартфоны</h2>
-    </div>
-    <ul id="list1" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw15666a336b1401.js" marketonload="xmlLoad(1);">
-    </ul>
-</section>
-<!--e 常规商品楼层-->
-<!--s 常规商品楼层-->
-<section class="goodsList-block" id="flr2">
-    <div class="floor-title">
-        <h2 class="flr-hd-2 flr-hd">Планшеты</h2>
-    </div>
-    <ul id="list2" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw15666a35533e21.js" marketonload="xmlLoad(1);">
-    </ul>
-</section>
-<!--e 常规商品楼层-->
-<!--s 常规商品楼层-->
-<section class="goodsList-block" id="flr3">
-    <div class="floor-title">
-        <h2 class="flr-hd-3 flr-hd">Аксессуары</h2>
-    </div>
-    <ul id="list3" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw15666a38c42766.js" marketonload="xmlLoad(1);">
-    </ul>
-</section>
-<!--e 常规商品楼层-->
-<!--s 常规商品楼层-->
-<section class="goodsList-block" id="flr4">
-    <div class="floor-title">
-        <h2 class="flr-hd-4 flr-hd">Цифровая техника</h2>
-    </div>
-    <ul id="list4" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw15666a3a746a3d.js" marketonload="xmlLoad(1);">
-    </ul>
-</section>
-<!--e 常规商品楼层-->
+    <!--s 常规商品楼层-->
+    <section class="goodsList-block" id="flr1">
+        <div class="floor-title">
+            <h2 class="flr-hd-1 flr-hd">Смартфоны</h2>
+        </div>
+        <ul id="list1" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw15666a336b1401.js" marketonload="xmlLoad(1);">
+        </ul>
+    </section>
+    <!--e 常规商品楼层-->
+    <!--s 常规商品楼层-->
+    <section class="goodsList-block" id="flr2">
+        <div class="floor-title">
+            <h2 class="flr-hd-2 flr-hd">Планшеты</h2>
+        </div>
+        <ul id="list2" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw15666a35533e21.js" marketonload="xmlLoad(1);">
+        </ul>
+    </section>
+    <!--e 常规商品楼层-->
+    <!--s 常规商品楼层-->
+    <section class="goodsList-block" id="flr3">
+        <div class="floor-title">
+            <h2 class="flr-hd-3 flr-hd">Аксессуары</h2>
+        </div>
+        <ul id="list3" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw15666a38c42766.js" marketonload="xmlLoad(1);">
+        </ul>
+    </section>
+    <!--e 常规商品楼层-->
+    <!--s 常规商品楼层-->
+    <section class="goodsList-block" id="flr4">
+        <div class="floor-title">
+            <h2 class="flr-hd-4 flr-hd">Цифровая техника</h2>
+        </div>
+        <ul id="list4" class="goods-list" marketstart="0" markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw15666a3a746a3d.js" marketonload="xmlLoad(1);">
+        </ul>
+    </section>
+    <!--e 常规商品楼层-->
     <!-- S back to main -->
-    <a href="http://m.jd.ru/act/new_year.html" class="actbanner"><img
+    <a href="http://m.jd.ru/act/new_year.html" class="actbanner" hasclstag="true"><img
             src="http://img11.360buyimg.com/cms/jfs/t2365/118/1528016625/21329/a3d5fd90/566799b9N13565acb.jpg" alt="" width="640" height="230"/></a>
     <!-- E back to main -->
 </div>
