M版家电频道

--- a/overseas/M/home_appliances.html
+++ b/overseas/M/home_appliances.html
@@ -284,6 +284,7 @@
 			{% if(shopName=="" || shopName!="end"){ %}
 		</a>
 		{% } %}
+		<span class="list-ms-line"></span>
 	</li>
 </script>
 <!--end of listMs-->
@@ -309,6 +310,7 @@
 			<div class="tag-discount dib"><span>{%=appPrice%}</span>СКИДКА</div>
 			{% } %}
 		</div>
+		<span class="list-ms-line"></span>
 	</li>
 </script>
 <!--end of listMsTomrrow-->
