M版家电频道v1.2：改文案

--- a/overseas/M/home_appliances.html
+++ b/overseas/M/home_appliances.html
@@ -83,7 +83,7 @@
 
 <!-- S kitchen -->
 <div class="wrap-flr">
-	<div class="floor-title"><span class="tit-text  dib"> Креативные идеи для дома</span></div>
+	<div class="floor-title"><span class="tit-text  dib">КРЕАТИВНЫЕ ИДЕИ ДЛЯ ДОМА</span></div>
 	<div class="hideArea hide">
 		<ul class="goods-list" marketstart="0" marketlength="" markettplid="listNew" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw156f0f3616c289.js" marketonload="xmlLoad(1);"></ul>
 	</div>
@@ -211,7 +211,7 @@
 		<a href="http://m.jd.ru/ware/detail/{%=id%}" clstag="{%=defined5%}">
 			<div class="j-pic">
 				<image src="{%=image%}"></image>
-				<span class="j-pic-extra">НОВЫЕ</span>
+				<span class="j-pic-extra">НОВИНКА</span>
 			</div>
 			<div class="detail">
 				<p class="title">{%=recommendName%}</p>
