--- a/overseas/h5/ru/home_appliances.html
+++ b/overseas/h5/ru/home_appliances.html
@@ -76,7 +76,7 @@
 <div class="wrap-flr">
 	<div class="floor-title"><span class="tit-text  dib">НОВЫЕ ПОСТУПЛЕНИЯ</span></div>
 	<div class="hideArea hide">
-		<ul class="goods-list" marketstart="0" marketlength="" markettplid="listNew" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw156f0f34d99392.js" marketonload="xmlLoad(1);"></ul>
+		<ul class="goods-list goods-list-new" marketstart="0" marketlength="" markettplid="listNew" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw156f0f34d99392.js" marketonload="xmlLoad(1);"></ul>
 	</div>
 </div>
 <!-- E new -->
