--- a/overseas/pc/421.html
+++ b/overseas/pc/421.html
@@ -372,7 +372,7 @@
             <div class="miaosha-tab">
                 <ul class="cf">
                     <li class="cur miaosha-tab-today">
-                        <a href="#nolink" miaoshaClstag="true">
+                        <a href="#nolink" hasclstag="true">
                     <div class="miaosha-status">
                         Сегодня
                     </div>
@@ -391,7 +391,7 @@
                         </a>
                     </li>
                     <li class="miaosha-tab-tomorrow">
-                        <a href="#nolink" miaoshaClstag="true">
+                        <a href="#nolink" hasclstag="true">
                             <div class="miaosha-status">Завтра</div>
                     <div class="miaosha-detail">
                         <span class="miaosha-detail-text">Старт завтра в 10:00</span>
@@ -404,8 +404,8 @@
             <div class="miaosha-tab-ct" id="miaoshaFlr">
                 <div class="miaosha-ct">
                     <div class="miaosha-ct-list">
-                        <ul class="cf wrap-goods"  markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw156f0f5c3b9ef7.js" id="" marketonload="goodsLoad(1);"></ul>
-                        <ul class="cf wrap-goods"  markettplid="miaoNextTpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw156f0f5c3b9ef7.js" id="" marketonload="goodsLoad(1);"></ul>
+                        <ul class="cf wrap-goods"  markettplid="list1Tpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570f9918477b2.js" id="" marketonload="goodsLoad(1);"></ul>
+                        <ul class="cf wrap-goods"  markettplid="miaoNextTpl" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570f9e01a83ca.js" id="" marketonload="goodsLoad(1);"></ul>
                     </div>
                 </div>
             </div>
@@ -443,7 +443,7 @@
                     </div>
                 </div>
                 <div class="flr-bd">
-                    <ul class="cf wrap-goods wrap-goods-single"  markettplid="listHot" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw156f0f5c3b9ef7.js" id="" marketonload="goodsLoad(1);"></ul>
+                    <ul class="cf wrap-goods wrap-goods-single"  markettplid="listHot" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570f9fd530ee2.js" id="" marketonload="goodsLoad(1);"></ul>
                 </div>
                 <div class="flr-ft">
                     <a href="#" target="_blank" class="href-more"><span class="icon-more"></span></a>
@@ -458,7 +458,7 @@
                     </div>
                 </div>
                 <div class="flr-bd">
-                    <ul class="cf wrap-goods wrap-goods-single"  markettplid="listHot" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw156f0f5c3b9ef7.js" id="" marketonload="goodsLoad(1);"></ul>
+                    <ul class="cf wrap-goods wrap-goods-single"  markettplid="listHot" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570f9febc6780.js" id="" marketonload="goodsLoad(1);"></ul>
                 </div>
                 <div class="flr-ft">
                     <a href="#" target="_blank" class="href-more"><span class="icon-more"></span></a>
@@ -473,7 +473,7 @@
                     </div>
                 </div>
                 <div class="flr-bd">
-                    <ul class="cf wrap-goods wrap-goods-single"  markettplid="listHot" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw156f0f5c3b9ef7.js" id="" marketonload="goodsLoad(1);"></ul>
+                    <ul class="cf wrap-goods wrap-goods-single"  markettplid="listHot" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570fa002d5265.js" id="" marketonload="goodsLoad(1);"></ul>
                 </div>
                 <div class="flr-ft">
                     <a href="#" target="_blank" class="href-more"><span class="icon-more"></span></a>
@@ -488,7 +488,7 @@
                     </div>
                 </div>
                 <div class="flr-bd">
-                    <ul class="cf wrap-goods wrap-goods-single"  markettplid="listHot" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw156f0f5c3b9ef7.js" id="" marketonload="goodsLoad(1);"></ul>
+                    <ul class="cf wrap-goods wrap-goods-single"  markettplid="listHot" marketurl="http://acen.jd.com/tjw/get/tjw2015/tjw1570fa017ca21e.js" id="" marketonload="goodsLoad(1);"></ul>
                 </div>
                 <div class="flr-ft">
                     <a href="#" target="_blank" class="href-more"><span class="icon-more"></span></a>
@@ -548,22 +548,22 @@
 <div class="wrap-flr flr10 float-flr" id="flr11">
     <div class="category">
         <ul class="cf">
-            <li class="item-1"><a href="//www.jd.ru/category/%D0%A1%D0%BE%D1%82%D0%BE%D0%B2%D1%8B%D0%B5%20%D1%82%D0%B5%D0%BB%D0%B5%D1%84%D0%BE%D0%BD%D1%8B_875064308-875064516-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid"><span class="round"></span><span class="icon-back icon-back-1"></span><em>СМАРТФОНЫ</em> </a></li>
-            <li class="item-2"><a href="//www.jd.ru/category/%D1%82%D0%B0%D0%B1%D0%BB%D0%B5%D1%82%D0%BA%D0%B8_875065745-875065752-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid"><span class="round"></span><span class="icon-back icon-back-2"></span><em>ПЛАНШЕТЫ</em> </a></li>
-            <li class="item-3"><a href="//www.jd.ru/category/Irons%2C%20Steamers%20%26%20Accessories_875063589-875063831-3.html"><span class="round"></span><span class="icon-back icon-back-3"></span><em>ТЕХНИКА ДЛЯ ЖИЗНИ</em> </a></li>
-            <li class="item-4"><a href="//www.jd.ru/category/%D0%94%D1%80%D1%83%D0%B3%D0%B8%D0%B5%20%D0%BA%D1%83%D1%85%D0%BE%D0%BD%D0%BD%D1%8B%D0%B5%20%D0%BF%D1%80%D0%B5%D0%B4%D0%BC%D0%B5%D1%82%D1%8B_875063586-875063586-2.html?page=1&pageSize=24&showType=grid&brandId=1272"><span class="round"></span><span class="icon-back icon-back-4"></span><em>ТЕХНИКА ДЛЯ КУХНИ</em> </a></li>
-            <li class="item-5"><a href="//www.jd.ru/category/Hair%20%26%20Beauty%20Tools_875063305-875063600-2.html"><span class="round"></span><span class="icon-back icon-back-5"></span><em>УХОД ЗА ЗДОРОВЬЕМ</em> </a></li>
-            <li class="item-6"><a href="//www.jd.ru/category/%D0%98%D0%B3%D1%80%D0%BE%D0%B2%D1%8B%D0%B5%20%D0%BF%D1%80%D0%B8%D1%81%D1%82%D0%B0%D0%B2%D0%BA%D0%B8_875065261-875065261-2.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid"><span class="round"></span><span class="icon-back icon-back-6"></span><em>АУДИО И ВИДЕО</em> </a></li>
-            <li class="item-7"><a href="//www.jd.ru/category/%D0%98%D0%BD%D1%82%D0%B5%D0%BB%D0%BB%D0%B5%D0%BA%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5%20%D0%BD%D0%B0%D1%80%D1%83%D1%87%D0%BD%D1%8B%D0%B5%20%D1%87%D0%B0%D1%81%D1%8B_875065258-875065269-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid"><span class="round"></span><span class="icon-back icon-back-7"></span><em>СМАРТ-ОБОРУДОВАНИЕ</em> </a></li>
-            <li class="item-8"><a href="//www.jd.ru/category/%D0%98%D0%BD%D1%82%D0%B5%D0%BB%D0%BB%D0%B5%D0%BA%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5%20%D0%BD%D0%B0%D1%80%D1%83%D1%87%D0%BD%D1%8B%D0%B5%20%D1%87%D0%B0%D1%81%D1%8B_875065258-875065269-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid"><span class="round"></span><span class="icon-back icon-back-8"></span><em>АКСЕССУАРЫ ДЛЯ СМАРТФОНОВ</em> </a></li>
-            <li class="item-9"><a href="//www.jd.ru/category/Computer%20Peripherals_875064192-875064210-2.html"><span class="round"></span><span class="icon-back icon-back-9"></span><em>АКСЕССУАРЫ ДЛЯ ПК</em> </a></li>
-            <li class="item-10"><a href="//www.jd.ru/category/Jewelry%20Sets%20%26%20More_875065203-875065208-2.html"><span class="round"></span><span class="icon-back icon-back-10"></span><em>УКРАШЕНИЯ И ЧАСЫ</em> </a></li>
-            <li class="item-11"><a href="//www.jd.ru/category/Jackets%20%26%20Coats_875064188-875064635-2.html"><span class="round"></span><span class="icon-back icon-back-11"></span><em>МУЖСКАЯ ОДЕЖДА</em> </a></li>
-            <li class="item-12"><a href="//www.jd.ru/category/Tops%20%26%20Tees_875064568-875064570-2.html"><span class="round"></span><span class="icon-back icon-back-12"></span><em>ЖЕНСКАЯ ОДЕЖДА</em> </a></li>
-            <li class="item-13"><a href="//www.jd.ru/category/Outdoor%20Gear_875063307-875063612-2.html"><span class="round"></span><span class="icon-back icon-back-13"></span><em>СПОРТ И ОТДЫХ </em> </a></li>
-            <li class="item-14"><a href="//www.jd.ru/category/Toy%20%26%20Hobbies_875065568-875065572-2.html"><span class="round"></span><span class="icon-back icon-back-14"></span><em>ИГРУШКИ</em> </a></li>
-            <li class="item-15"><a href="//www.jd.ru/category/Interior%20Accessories_875063308-875063623-2.html"><span class="round"></span><span class="icon-back icon-back-15"></span><em>АВТО-ТОВАРЫ</em> </a></li>
-            <li class="item-16"><a href="//www.jd.ru/category/Kitchen%20%26%20Bath%20Fixtures_875063304-875063596-2.html"><span class="round"></span><span class="icon-back icon-back-16"></span><em>Кухонные принадлежности и гаджеты</em> </a></li>
+            <li class="item-1"><a href="//www.jd.ru/category/%D0%A1%D0%BE%D1%82%D0%BE%D0%B2%D1%8B%D0%B5%20%D1%82%D0%B5%D0%BB%D0%B5%D1%84%D0%BE%D0%BD%D1%8B_875064308-875064516-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-1"></span><em>СМАРТФОНЫ</em> </a></li>
+            <li class="item-2"><a href="//www.jd.ru/category/%D1%82%D0%B0%D0%B1%D0%BB%D0%B5%D1%82%D0%BA%D0%B8_875065745-875065752-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-2"></span><em>ПЛАНШЕТЫ</em> </a></li>
+            <li class="item-3"><a href="//www.jd.ru/category/Irons%2C%20Steamers%20%26%20Accessories_875063589-875063831-3.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-3"></span><em>ТЕХНИКА ДЛЯ ЖИЗНИ</em> </a></li>
+            <li class="item-4"><a href="//www.jd.ru/category/%D0%94%D1%80%D1%83%D0%B3%D0%B8%D0%B5%20%D0%BA%D1%83%D1%85%D0%BE%D0%BD%D0%BD%D1%8B%D0%B5%20%D0%BF%D1%80%D0%B5%D0%B4%D0%BC%D0%B5%D1%82%D1%8B_875063586-875063586-2.html?page=1&pageSize=24&showType=grid&brandId=1272" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-4"></span><em>ТЕХНИКА ДЛЯ КУХНИ</em> </a></li>
+            <li class="item-5"><a href="//www.jd.ru/category/Hair%20%26%20Beauty%20Tools_875063305-875063600-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-5"></span><em>УХОД ЗА ЗДОРОВЬЕМ</em> </a></li>
+            <li class="item-6"><a href="//www.jd.ru/category/%D0%98%D0%B3%D1%80%D0%BE%D0%B2%D1%8B%D0%B5%20%D0%BF%D1%80%D0%B8%D1%81%D1%82%D0%B0%D0%B2%D0%BA%D0%B8_875065261-875065261-2.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-6"></span><em>АУДИО И ВИДЕО</em> </a></li>
+            <li class="item-7"><a href="//www.jd.ru/category/%D0%98%D0%BD%D1%82%D0%B5%D0%BB%D0%BB%D0%B5%D0%BA%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5%20%D0%BD%D0%B0%D1%80%D1%83%D1%87%D0%BD%D1%8B%D0%B5%20%D1%87%D0%B0%D1%81%D1%8B_875065258-875065269-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-7"></span><em>СМАРТ-ОБОРУДОВАНИЕ</em> </a></li>
+            <li class="item-8"><a href="//www.jd.ru/category/%D0%98%D0%BD%D1%82%D0%B5%D0%BB%D0%BB%D0%B5%D0%BA%D1%82%D1%83%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B5%20%D0%BD%D0%B0%D1%80%D1%83%D1%87%D0%BD%D1%8B%D0%B5%20%D1%87%D0%B0%D1%81%D1%8B_875065258-875065269-3.html?page=1&sortType=sort_total_sale_amount_desc&pageSize=24&showType=grid" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-8"></span><em>АКСЕССУАРЫ ДЛЯ СМАРТФОНОВ</em> </a></li>
+            <li class="item-9"><a href="//www.jd.ru/category/Computer%20Peripherals_875064192-875064210-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-9"></span><em>АКСЕССУАРЫ ДЛЯ ПК</em> </a></li>
+            <li class="item-10"><a href="//www.jd.ru/category/Jewelry%20Sets%20%26%20More_875065203-875065208-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-10"></span><em>УКРАШЕНИЯ И ЧАСЫ</em> </a></li>
+            <li class="item-11"><a href="//www.jd.ru/category/Jackets%20%26%20Coats_875064188-875064635-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-11"></span><em>МУЖСКАЯ ОДЕЖДА</em> </a></li>
+            <li class="item-12"><a href="//www.jd.ru/category/Tops%20%26%20Tees_875064568-875064570-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-12"></span><em>ЖЕНСКАЯ ОДЕЖДА</em> </a></li>
+            <li class="item-13"><a href="//www.jd.ru/category/Outdoor%20Gear_875063307-875063612-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-13"></span><em>СПОРТ И ОТДЫХ </em> </a></li>
+            <li class="item-14"><a href="//www.jd.ru/category/Toy%20%26%20Hobbies_875065568-875065572-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-14"></span><em>ИГРУШКИ</em> </a></li>
+            <li class="item-15"><a href="//www.jd.ru/category/Interior%20Accessories_875063308-875063623-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-15"></span><em>АВТО-ТОВАРЫ</em> </a></li>
+            <li class="item-16"><a href="//www.jd.ru/category/Kitchen%20%26%20Bath%20Fixtures_875063304-875063596-2.html" hasclstag="true"><span class="round"></span><span class="icon-back icon-back-16"></span><em>Кухонные принадлежности и гаджеты</em> </a></li>
 
         </ul>
     </div>
@@ -688,19 +688,21 @@
 
 
 <script type="text/html" id="list1Tpl">
-    <li class="miaosha-ct-ing" promoid="{%=defined1%}" skuid="{%=id%}">
+    <li class="miaosha-ct-ing" skuid="{%=id%}">
         {% var t = ((normalPrice - jdPrice)/normalPrice) * 100; %}
         <!-- S 商品信息 -->
         <div class="miaosha-ct-info">
-            <a href="{%=recommendUrl%}" class="href-img" target="_blank" miaoshaClstag="true">
+            <a href="{%=recommendUrl%}" class="href-img" target="_blank" hasclstag="true">
                 <image init_src="{%=image%}"></image>
             </a>
             <div class="goods-detail">
                 <div class="goods-other">
-                    <span class="jd-own jd-own-{%=defined10%}">Коллекция JD </span>
+                    {% if(defined1 != 0){ %}
+                    <span class="jd-own">Коллекция JD </span>
+                    {% } %}
                 </div>
                 <div class="goods-name">
-                    <a href="{%=recommendUrl%}" class="goods-href-name" target="_blank" miaoshaClstag="true">{%=recommendName%}</a>
+                    <a href="{%=recommendUrl%}" class="goods-href-name" target="_blank" hasclstag="true">{%=recommendName%}</a>
                 </div>
                 <div class="goods-price">
                     ${%=jdPrice%}
@@ -712,7 +714,7 @@
                 <div class="goods-discount pos-abs"><em class="goods-discount-no">{%= getParseInt(t) %}</em>% СКИДКА</div>
                 {% } %}
                 <div class="goods-btn">
-                    <a href="{%=recommendUrl%}" class="goods-href-btn" target="_blank" miaoshaClstag="true">Купить &gt;</a>
+                    <a href="{%=recommendUrl%}" class="goods-href-btn" target="_blank" hasclstag="true">Купить &gt;</a>
                 </div>
                 <div class="goods-btn goods-btn-wish">
                     <a href="#" class="goods-href-wish" spuid="{%= id %}" hasclstag="true"><i class="icon icon-wish"></i><span class="goods-href-desc">В "мои желания"</span></a>
@@ -734,15 +736,17 @@
         {% var t = ((normalPrice - jdPrice)/normalPrice) * 100; %}
         <!-- S 商品信息 -->
         <div class="miaosha-ct-info">
-            <a href="{%=recommendUrl%}" class="href-img" target="_blank" miaoshaClstag="true">
+            <a href="{%=recommendUrl%}" class="href-img" target="_blank" hasclstag="true">
                 <image init_src="{%=image%}"></image>
             </a>
             <div class="goods-detail">
-            <div class="goods-other">
-                <span class="jd-own jd-own-{%=defined10%}">Коллекция JD </span>
-            </div>
+                <div class="goods-other">
+                    {% if(defined1 != 0){ %}
+                    <span class="jd-own">Коллекция JD </span>
+                    {% } %}
+                </div>
             <div class="goods-name">
-                <a href="{%=recommendUrl%}" class="goods-href-name" target="_blank" miaoshaClstag="true">{%=recommendName%}</a>
+                <a href="{%=recommendUrl%}" class="goods-href-name" target="_blank" hasclstag="true">{%=recommendName%}</a>
             </div>
             <div class="goods-price">
                 ${%=jdPrice%}
@@ -754,8 +758,13 @@
             <div class="goods-discount pos-abs"><em class="goods-discount-no">{%= getParseInt(t) %}</em>% СКИДКА</div>
             {% } %}
             <div class="goods-btn">
-                <a href="{%=recommendUrl%}" class="goods-href-btn" target="_blank" miaoshaClstag="true">Купить &gt;</a>
+                <a href="{%=recommendUrl%}" class="goods-href-btn" target="_blank" hasclstag="true">Купить &gt;</a>
             </div>
+                <div class="goods-btn goods-btn-wish">
+                    <a href="#" class="goods-href-wish" spuid="{%= id %}" hasclstag="true"><i class="icon icon-wish"></i><span class="goods-href-desc">В "мои желания"</span></a>
+                    <span href="#" class="goods-href-wished"><i class="icon icon-wish"></i><span class="goods-href-desc">В "мои желания"</span></span>
+                    <p class="wish-tips">Товар был успешно добавлен в корзину!</p>
+                </div>
             </div>
         </div>
         <!-- E 商品信息 -->
@@ -782,15 +791,17 @@
         {% var t = ((normalPrice - jdPrice)/normalPrice) * 100; %}
         <!-- S 商品信息 -->
 
-            <a href="{%=recommendUrl%}" class="href-img" target="_blank" miaoshaClstag="true">
+            <a href="{%=recommendUrl%}" class="href-img" target="_blank" hasclstag="true">
                 <image init_src="{%=image%}"></image>
             </a>
         <div class="goods-detail">
             <div class="goods-other">
-                <span class="jd-own jd-own-{%=defined10%}">Коллекция JD </span>
+                {% if(defined1 != 0){ %}
+                <span class="jd-own">Коллекция JD </span>
+                {% } %}
             </div>
             <div class="goods-name">
-                <a href="{%=recommendUrl%}" class="goods-href-name" target="_blank" miaoshaClstag="true">{%=recommendName%}</a>
+                <a href="{%=recommendUrl%}" class="goods-href-name" target="_blank" hasclstag="true">{%=recommendName%}</a>
             </div>
             <div class="goods-price">
                 ${%=jdPrice%}
@@ -890,7 +901,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
 </script>
 <!-- custom js-->
 <script>
-    var clstagString = 'pageclick|keycount|123_otd_ru_2016030314|';
+    var clstagString = 'pageclick|keycount|12April_ru421_201604121|';
     window.goodsObj = {
         total: $('ul[marketurl]').length,
         loadedNo:0
@@ -907,7 +918,7 @@ window._fbq.push(['track', 'PixelInitialized', {}]);
         /* clstag */
         $.each($('[hasclstag]'), function (index,item){
             $(item).attr({
-                "clstag": clstagString +(index+200)
+                "clstag": clstagString +(index+1)
             })
         })
         activityDateJudge(new Date().getDate());
